tests/snapshots/sizes__tap_list_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  F┌ JDBC tap — 8 query · 0 heartbeat · view: list · v cycle · Shift-B baseline · s sort · c c┐   │
│  W│    duration       rows  app                   sql / kind                                 │   │
│  O│       1.8ms          1  shop-api              SELECT id, user_id, status FROM orders WHE…│   │
└───│       420µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│───┘
┌ re│       435µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│───┐
│id │       450µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│   │
│1  │       465µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│   │
│2  │       480µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│   │
│3  │       495µs          1  shop-api              SELECT * FROM order_items WHERE order_id =…│   │
│4  │       310µs          1  shop-api              SELECT id, email, plan FROM users WHERE id…│   │
│5  │                                                                                          │   │
│6  │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   └──────────────────────────────────────────────────────────────────────────────────────────┘   │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
