tests/snapshots/sizes__tap_list_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                  │
│  FROM users                                                                                                          │
│  WHERE plan = 'pro'                                                                                                  │
│  OR┌ JDBC tap — 8 query · 0 heartbeat · view: list · v cycle · Shift-B baseline · s sort · c clear · q close ───┐    │
└────│    duration       rows  app                   sql / kind                                                   │────┘
┌ res│       1.8ms          1  shop-api              SELECT id, user_id, status FROM orders WHERE status = ?      │────┐
│id  │       420µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│1   │       435µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│2   │       450µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│3   │       465µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│4   │       480µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│5   │       495µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                 │    │
│6   │       310µs          1  shop-api              SELECT id, email, plan FROM users WHERE id = ?               │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
