tests/snapshots/sizes__tap_list_200x50.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                                                                                                                                         ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                                                                                                  │
│  FROM users                                                                                                                                                                                          │
│  WHERE plan = 'pro'                                                                                                                                                                                  │
│  ORDER BY created_at DESC;                                                                                                                                                                           │
│       ┌ JDBC tap — 8 queries · 0 heartbeats · view: list · v cycle · Shift-B baseline · s sort · c clear · q close ──────────────────────────────────────────────────────────────────────────┐       │
└───────│    duration       rows  app                   sql / kind                                                                                                                             │───────┘
┌ result│       1.8ms          1  shop-api              SELECT id, user_id, status FROM orders WHERE status = ?                                                                                │───────┐
│id  ema│       420µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│1   ada│       435µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│2   lin│       450µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│3   gra│       465µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│4   ala│       480µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│5   eds│       495µs          1  shop-api              SELECT * FROM order_items WHERE order_id = ?                                                                                           │       │
│6   kat│       310µs          1  shop-api              SELECT id, email, plan FROM users WHERE id = ?                                                                                         │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
