tests/snapshots/sizes__tap_list_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│>┌ JDBC tap — 8 queries · 0 heartbeats · … ────────────┐  │
│ │    duration       rows  app                   sql / │  │
│ │       1.8ms          1  shop-api              SELEC…│  │
│ │       420µs          1  shop-api              SELEC…│  │
└─│       435µs          1  shop-api              SELEC…│──┘
┌ │       450µs          1  shop-api              SELEC…│──┐
│i│       465µs          1  shop-api              SELEC…│  │
│1│       480µs          1  shop-api              SELEC…│  │
│2│       495µs          1  shop-api              SELEC…│  │
│3│       310µs          1  shop-api              SELEC…│  │
│4└─────────────────────────────────────────────────────┘  │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · F1 +5 more
