tests/snapshots/sizes__tap_list_80x24.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                 ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ JDBC tap — 8 queries · 0 heartbeats · view: list · v cycle · … ───────┐   │
│  │    duration       rows  app                   sql / kind              │   │
│  │       1.8ms          1  shop-api              SELECT id, user_id, sta…│   │
│  │       420µs          1  shop-api              SELECT * FROM order_ite…│   │
└──│       435µs          1  shop-api              SELECT * FROM order_ite…│───┘
┌ r│       450µs          1  shop-api              SELECT * FROM order_ite…│───┐
│id│       465µs          1  shop-api              SELECT * FROM order_ite…│   │
│1 │       480µs          1  shop-api              SELECT * FROM order_ite…│   │
│2 │       495µs          1  shop-api              SELECT * FROM order_ite…│   │
│3 │       310µs          1  shop-api              SELECT id, email, plan …│   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · F1 +4 more
