tests/snapshots/sizes__tap_nplus1_200x50.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                                                                                                  │
│  FROM users                                                                                                                                                                                          │
│  WHERE plan = 'pro'                                                                                                                                                                                  │
│  ORDER BY created_at DESC;                                                                                                                                                                           │
└───────┌ JDBC tap — 8 query · 0 heartbeat · view: N+1 · v cycle · Shift-B baseline · s sort · c clear · q close ──────────────────────────────────────────────────────────────────────────────┐───────┘
┌ result│   calls        span  txn / conn          caller · fingerprint                                                                                                                        │───────┐
│id  ema│       6     125.0ms  conn-7#42           OrderService.loadItems:88 · select * from order_items where order_id = ?                                                                    │       │
│1   ada│                                                                                                                                                                                      │       │
│2   lin│                                                                                                                                                                                      │       │
│3   gra│                                                                                                                                                                                      │       │
│4   ala│                                                                                                                                                                                      │       │
│5   eds│                                                                                                                                                                                      │       │
│6   kat│                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
